[package]
name = "casket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndjsonlogger = "0.1.0"
ndjsonloggercore = {version = "0.1.0", features = ["isotimestamp", "std"]}
fd-queue = {git = "https://github.com/flickpp/fd-queue.git", rev = "d076627ccc24eaaf49b06113c46b5ef2abf37a16", features = ["mio", "mio-fd"]}
libc = "0.2.133"
mio = {version = "0.8.4", features = ["net", "os-ext", "os-poll"]}
fork = "0.1.20"
serde = { version = "1.0.144", features = ["derive"] }
bincode = "1.3.3"
httparse = "1.8.0"
http-types = "2.12.0"
mio-misc = "2.0.0"
lazy_static = "1.4.0"
hex = "0.4.3"
random-fast-rng = "0.1.1"
simple-work-stealer = {git = "https://github.com/flickpp/simple-work-steaker.git"}

[dependencies.pyo3]
version = "0.17.1"
features = ["auto-initialize"]
