[package]
name = "casket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndjsonlogger = "0.1.0"
ndjsonloggercore = { features = ["isotimestamp", "std"], git = "https://github.com/flickpp/ndjsonloggercore", rev = "a07c141ed4f462c0728fe1308ffb6ca30fe8ad81" }
fd-queue = {git = "https://github.com/flickpp/fd-queue.git", rev = "d076627ccc24eaaf49b06113c46b5ef2abf37a16", features = ["mio", "mio-fd"]}
libc = "0.2.133"
mio = {version = "0.8.4", features = ["net", "os-ext", "os-poll"]}
fork = "0.1.20"
serde = { version = "1.0.144", features = ["derive"] }
bincode = "1.3.3"
httparse = "1.8.0"
http-types = "2.12.0"
hex = "0.4.3"
random-fast-rng = "0.1.1"
ctrlc = "3.2.3"

[dependencies.pyo3]
version = "0.17.1"
features = ["auto-initialize"]
